syntax = "proto3";

package add;

option go_package="github.com/S-ign/grpc-go-course/add/addpb";

message Adding {
	int64 first_number = 1;
	int64 second_number = 2;
}

message AddRequest {
	Adding adding = 1;
}

message AddResponse {
	int64 sum = 1;
}

service AddService {
	// Unary
	rpc Add(AddRequest) returns (AddResponse) {};
}
